--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ GENERIC CLASSES
 }
 
 .completed input {
-  background-image: url('../public/assets/images/icon-check.svg'),
+  background-image: url('assets/images/icon-check.svg'),
     var(--checked-background);
   background-repeat: no-repeat;
   background-position: center;
